Find your senator alignment fix

--- a/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-actionbar/nysenate-actionbar.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-actionbar/nysenate-actionbar.scss
@@ -12,14 +12,6 @@
   max-width: unset;
   transition: margin 0.25s ease;
 
-  &::before {
-    content: '';
-    position: relative;
-    display: inline-block;
-    width: 1px;
-    vertical-align: middle;
-    margin-left: -4px;
-  }
   // used when actionbar only contains
   // a simple message - usually not logged-in
   .c-actionbar--cta {
